--- a/app/src/main/res/layout-w600dp/activity_home_page.xml
+++ b/app/src/main/res/layout-w600dp/activity_home_page.xml
@@ -5,19 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".Controllers.Activities.HomePageActivity">
 
     <FrameLayout
         android:id="@+id/homepage_frame_layout"
-        android:layout_width="0dp"
-        android:layout_weight="40"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
         <androidx.drawerlayout.widget.DrawerLayout
             android:id="@+id/drawer_lyt"
-            android:layout_width="300dp"
-            android:layout_height="900dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             tools:openDrawer="start">
 
@@ -32,12 +31,24 @@
                     android:layout_height="?actionBarSize"
                     android:background="?attr/colorPrimary"
                     android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
-
-                <FrameLayout
-                    android:id="@+id/drawer_frame_layout"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                <FrameLayout
+                    android:id="@+id/drawer_frame_layout"
+                    android:layout_width="0dp"
+                    android:layout_weight="30"
+                    android:layout_height="match_parent"
                     />
+                    <FrameLayout
+                        android:id="@+id/details_frame_layout"
+                        android:layout_width="0dp"
+                        android:layout_weight="60"
+                        android:layout_height="match_parent"/>
+
+                </LinearLayout>
+
             </LinearLayout>
 
             <com.google.android.material.navigation.NavigationView
@@ -54,14 +65,8 @@
 
     </FrameLayout>
 
-    <FrameLayout
-        android:id="@+id/details_frame_layout"
-        android:layout_width="0dp"
-        android:layout_weight="60"
-        android:layout_height="match_parent">
 
 
-    </FrameLayout>
 
 
 </LinearLayout>
